# PtDAlgorithms

./: .gitignore  .nojekyll  CACHE_CONSOLIDATION_COMPLETE.md  CACHE_TESTING_ADDED.md  CACHE_WORK_COMPLETE.md  CACHING_DOCS_CREATED.md  CACHING_SYSTEM_OVERVIEW.md  CHANGES_SUMMARY.md  CLAUDE.md  CMakeLists.txt  CONSOLIDATION_SUMMARY.md  DESCRIPTION  DEVEL.md  DEVEL_README.md  DISTRIBUTED_COMPUTING_GUIDE.md  DISTRIBUTED_DOCS_SUMMARY.md  EXAMPLE_UPDATES.md  FFI_MULTICORE_IMPLEMENTATION.md  FINAL_SESSION_SUMMARY.md  JAX_OPTIONAL_DEPENDENCY.md  MEMORY_LEAK_FIX.md  NAMESPACE  PTDALGORITHMS_ARCHITECTURE.md  PTDALGORITHMS_ARCHITECTURE_PROSE.md  README.md  SERIALIZE_FIX_SUMMARY.md  SESSION_SUMMARY.md  SVGD_ANALYZE_TRACE.md  SVGD_CONVERGENCE_ISSUES.md  SVGD_CORRECTNESS_ANALYSIS.md  SVGD_CORRECTNESS_TEST_STATUS.md  SVGD_DEFAULTS_SLURM_REVIEW.md  SVGD_PMAP_FIX.md  SVGD_PRIOR_ROBUSTNESS_TEST.md  SVGD_TESTING_PROBLEMS.md  TEST_FIX_COMPLETE.md  conda-release.sh  index.html  listings.json  pixi.toml  (+18 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.scripts/: template_init.py
R/: CMakeLists.txt  RcppExports.R  phasic-package.r  ptdalgorithms-package.r
api/: ClusterConfig.html  DistributedConfig.html  Edge.html  Graph.html  SVGD.html  Vertex.html  compute_moments_ffi.html  compute_pmf_and_moments_ffi.html  compute_pmf_ffi.html  configure_jax_devices.html  detect_slurm_environment.html  get_coordinator_address.html  get_default_config.html  index.html  initialize_distributed.html  initialize_jax_distributed.html  load_config.html  suggest_config.html  validate_config.html
binder/: env-mac.yml  env-osx-arm64.yml  environment-from-history.yml  environment.yml
c_api/: index.html
conda-build/: build_env.yaml  conda_build_config.yaml  meta.yaml  orig_meta.yaml
conda-build-r/: meta.yaml
conda.recipe/: meta.yaml
design/: pybind11_refactoring.html  pydll_fix_summary.html
docs/: _quarto.yml  custom.scss  index.qmd  numpy.css
examples/: DISTRIBUTED_COMPUTING_GUIDE.html  DISTRIBUTED_COMPUTING_GUIDE.md  README.md  SLURM_MULTINODE_GUIDE.html  SLURM_MULTINODE_GUIDE.md  _full_python_api_example.ipynb  approach_comparison.py  auto_parallel_example.py  coalescent-jointprob-R.html  coalescent-jointprob.html  complete_workflow.ipynb  complete_workflow_both_methods.ipynb  cpp_models_showcase.ipynb  cpu_monitoring_notebook.ipynb  cpu_monitoring_showcase.ipynb  distributed_inference_simple.py  experiments.html  ffi_approach_example.ipynb  ffi_approach_example.py  ffi_pdf.py  full_api_example.ipynb  full_python_api_example.ipynb  full_r_api_example.html  full_r_api_example.ipynb  generate_slurm_script.py  isolation_migration.html  jax_compatible_example.ipynb  jax_compatible_example.py  jit_or_ffi.py  load_cpp_model_simple.py  python_graph_to_jax_example.ipynb  python_graph_to_jax_example.py  rabbit_state_space.cpp  rabbits_full_py_api_example.html  rabbits_full_py_api_example.ipynb  simple_workflow_test.py  somecode.html  svgd_regularized_example.py  symbolic_elimination_tutorial.html  trace_repository_usage.py  (+1 more)
include/: user_model.h
jax_extension/: CMakeLists.txt  Makefile  README.md  SEPARATED_ARCHITECTURE.md  cache_binary.h5  debug_test.py  example_coalescent.py  jax_graph_method_pmf.cpp  jax_graph_method_pmf.h  jax_graph_method_pmf.py  separated_graph_pmf.cpp  separated_graph_python.py  simple_python_test.py  test.ipynb  test_graph_api  test_graph_api.cpp  user_graph_api.cpp  user_graph_api.h
man/: covariance.Rd  dph_covariance.Rd  dph_reward_transform.Rd  expectation.Rd  expected_residence_time.Rd  expected_waiting_time.Rd  graph_as_dph_matrix.Rd  graph_as_matrix.Rd  moments.Rd  phasic-package.Rd  reward_transform.Rd  states.Rd  variance.Rd  vertex_at.Rd  vertices_length.Rd
pages/: README_distributed_computing.html  SVGD_ANALYZE_TRACE.html  SVGD_SCHEDULE_SYSTEM.html  algorithms.html  architecture.html  auto_parallel_computing.html  caching_guide.html  coalescent_showcase.html  config_system.html  cpu_monitoring_showcase.html  distributed_computing.html  distributed_computing_basics.html  distributed_svgd_inference.html  distributions.html  epochs.html  explicit_config_system.html  full_python_api_example.html  getting_started.html  graphbuilder_showcase.html  joint_prob.html  laplace.html  math.html  math_and_algorithms.html  moments.html  phase-type-distributions.html  slurm_cluster_setup.html  slurm_multinode_guide.html  state_lumping.html  state_space.html  svgd.html  svgd_inference.html  svgd_jax.html  symbolic_gauss_elimination.html  tutorial.html
ptdalgorithms/: __init__.py  plot.py  ptdalgorithms.h
r_api/: index.html
sandbox/: CACHING_IMPLEMENTATION.md  CSE_IMPLEMENTATION_PLAN.md  CSE_PHASE1_STATUS.md  CSE_PHASE2_STATUS.md  CSE_PHASE3_STATUS.md  CSE_PHASE_STATUS_TEMPLATE.md  FFI_FIX_SUMMARY.md  MODEL_LIBRARY_GUIDE.md  PHASE4_5_IMPLEMENTATION_PLAN.md  PHASE5_WEEK3_COMPLETE.md  TRACE_PHASE1_STATUS.md  TRACE_PHASE2_STATUS.md  TRACE_PHASE3_STATUS.md  TRACE_PHASE4_1_STRUCTURES_STATUS.md  TRACE_PHASE4_2_RECORDING_STATUS.md  TRACE_PHASE4_3_ELIMINATION_STATUS.md  TRACE_PHASE4_4_EVALUATION_STATUS.md  TRACE_PHASE4_6_REWARD_COMPUTE_STATUS.md  TRACE_PHASE4_7_INTEGRATION_STATUS.md  TRACE_PHASE4_C_INTEGRATION_PLAN.md  TRACE_PHASE4_IMPLEMENTATION_PLAN.md  TRACE_PHASE4_MULTI_SESSION_PLAN.md  TRACE_PHASE4_SESSION_SUMMARY.md  experiments.ipynb  symbolic_cache.py  test_67_vertex_fix.py  test_evaluate_performance.py  test_ffi_dict_input.py  test_performance.py  test_svgd_cells.py  test_trace_integration.py  test_trace_recording_c.py  test_trace_reward_compute.py
scripts/: add_graph_hashes_to_registry.py  bump_version.py  call_tree_analyzer.py  gdk-code  phasic_jax.py  ptdalgorithms_jax.py  pybind11_test.py  r_api_markdown_docs.R  release-tag.py  testing.ipynb
src/: RcppExports.cpp  phasic.cpp  phasic.h  phasic_types.h  ptdalgorithms.cpp
test/: testPy.py  testR.R
tests/: README.md  run_all_tests.py  test_api_comprehensive.py  test_as_matrices_fix.py  test_comprehensive_api.py  test_from_matrices.py  test_jax_integration.py  test_load_cpp_model.py  (+12 more)
(+290 files in other folders)
